# WebServer

./: .gitignore  CMakeLists.txt  README.md
public/: 400.html  404.html  index.html
src/: address.c  address.h  buffer.c  buffer.h  connection.c  connection.h  connection_manager.c  connection_manager.h  definitions.h  fdwatch.c  fdwatch.h  file.c  file.h  http.c  http.h  main.c  mime.c  mime.h  network_io.c  network_io.h  socket.c  socket.h  win_definition.h  winsock_utils.c  winsock_utils.h
